# CPP-BacktestEngine

./: BacktestEngine_Project.cpp  CMakeLists.txt  Dockerfile  README.md
Components/: BacktestEngine.cpp  BacktestEngine.h  Bar.h  BarAggregator.h  BarStrategy.cpp  BarStrategy.h  OrderManager.cpp  OrderManager.h  QuoteStrategy.h  Statistiques.h  StatsCollector.cpp  StatsCollector.h  Strategy.h  Tick.h
Simulation/: BarGenerator.cpp  BarGenerator.h  TimeFrame.h
Strategies/: BreakoutStrategy.cpp  BreakoutStrategy.h  MeanReversionSimpleStrategy.cpp  MeanReversionSimpleStrategy.h
